JSAI/error/src/test/resources/base/loops_a002.js
/* DO WHILE */
var x = 10;

do {
  print("loop")
  print(x)
  x = x - 1;
} while (false);

print(x)
x;  // must be 9
